# trs-ssp

./: README.md  dune-project
FSharp/: SSP.sln
FSharp/SSPApp/: Config.fs  Program.fs  SSPApp.fsproj
FSharp/SSPApp.Tests/: Config.fs  SSPApp.Tests.fsproj  excfg1.json  excfg2.json  excfg3.json
FSharp/SSPApp/example_data/: dest_states_ex1.csv  ex1-config.json  ex2-config.json  superslim-config.json  superslim_dest_states.csv  superslim_ssp_input.csv  trans_funs_ex1.csv  trans_funs_ex2.csv
FSharp/SSPLib/: Data.fs  Filter.fs  Frontend.fs  Library.fs  SSPLib.fsproj  SquareMatrix.fs  State.fs  StateSpace.fs  StateSpacePolicy.fs
FSharp/SSPLib.Tests/: Filter.fs  SSPLib.Tests.fsproj  StateSpacePolicy.fs
OCaml/: ssp.opam
OCaml/examples/: trans_funs_ex2.csv
OCaml/src/: state_space.ml  state_space_policy.ml
OCaml/tests/: dune  template_state_tests.ml  trans_funs.csv
examples/: dune  ex1.ml  ex2.ml  example1.ml  example2.ml  trans_funs_ex1.csv
src/: action.ml  combination.ml  dune  frontend.ml  square_matrix.ml  state.ml  state_space.ml  state_space.mli  state_space_policy.ml  state_space_policy.mli  state_space_traversal.ml  template_state.ml  tools.ml
tests/: DummyState2A.ml  DummyState2A_Parsable.ml  combination_tests.ml  dune  frontend_tests.ml  square_matrix_tests.ml  state_space_policy_tests.ml
